--- a/main.css
+++ b/main.css
@@ -1,1 +1,125 @@
 
+
+/*
+================================================================================
+SCROLLBAR STYLE
+================================================================================
+*/
+  
+/*width*/
+
+body::-webkit-scrollbar {
+width:8px;
+}
+/*thumb*/
+
+body::-webkit-scrollbar-thumb {
+background:rgb(155, 37, 87);
+}
+
+/*track
+::-webkit-scrollbar-track {
+  background:rgb(245, 244, 241);
+}
+*/
+
+/*
+================================================================================
+PRELOADER
+================================================================================
+*/
+body,
+html {
+  /*width:100vw;*/
+  margin: 0;
+  padding: 0;
+ /* overflow-x: hidden; */
+}
+
+/*
+================================================================================
+IMAGE BLEND MODE
+================================================================================
+*/
+
+.newswrap:focus .card__blend-colour, .newswrap:hover .card__blend-colour {
+  background-color: #9B2557;
+}
+
+
+.newswrap:focus .card__image, .newswrap:hover .card__image {
+  mix-blend-mode: screen;
+}
+
+.card__image--transition {
+  transition: 0.3s ease all;
+  transition-delay: 0s;
+  mix-blend-mode: screen;
+}
+
+.card__image {
+  transform: translateZ(0);
+}
+
+
+
+
+.swiper-pagination-bullet {
+transform-origin: top left;
+   margin-right: 1.200em;
+    border-radius: 0 !important;
+    width:4em; 
+    height: 3px; 
+    opacity: 1;
+    margin-bottom: 0.5em;
+    background-color: #9b2557; 
+    outline: none !important;
+    box-shadow: none;
+    transform: scaleX(1);
+    transition: all 0.3s ease 0s;
+}
+
+.swiper-pagination-bullet-active {
+	background-color: #9b2557 !important;
+    outline: none !important;
+    box-shadow: none;
+     transform: scaleX(0.5);
+    transition: all 0.3s ease 0s;
+   }
+
+.swiper-container .swiper-wrapper .swiper-slide-active .up {
+  animation-name: fade-in;
+  animation-duration: 1s;
+  animation-fill-mode: both;
+}
+
+.swiper-container .swiper-wrapper .swiper-slide-active .up:nth-child(2) {
+  animation-delay: 0.5s;
+}
+.swiper-container .swiper-wrapper .swiper-slide-active .up__link:nth-child(1) {
+  animation-delay: 0.2s;
+}
+
+
+@keyframes fade-in {
+  from {
+    opacity: 0;
+   /* transform: translateY(100px);*/
+  }
+  to {
+    opacity: 1;
+  /*  transform: translateY(0); */
+  }
+}
+
+
+  /*
+================================================================================
+SWIPER FIX
+================================================================================
+*/
+
+.swiper-pagination {
+
+    z-index: 2 !important;
+}
