--- a/main.css
+++ b/main.css
@@ -63,7 +63,14 @@ IMAGE BLEND MODE
 
 
 
-
+.swiper-pagination {
+	/*position: absolute;
+	bottom: 2.000em;
+	right: "50%";
+	width: auto !important;
+	left: auto !important;
+	margin: 0;*/
+}
 .swiper-pagination-bullet {
 transform-origin: top left;
    margin-right: 1.200em;
@@ -92,6 +99,7 @@ transform-origin: top left;
   animation-duration: 1s;
   animation-fill-mode: both;
 }
+
 
 .swiper-container .swiper-wrapper .swiper-slide-active .up:nth-child(2) {
   animation-delay: 0.5s;
