--- a/main.css
+++ b/main.css
@@ -1,5 +1,3 @@
-
-
 /*
 ================================================================================
 SCROLLBAR STYLE
@@ -25,7 +23,96 @@ background:rgb(155, 37, 87);
 
 /*
 ================================================================================
-PRELOADER
+ANIMATE ON RESIZE
+================================================================================
+*/
+  /*
+  section, h1, h2, h3, p, li, img {
+    -moz-transition: width 1s ease-in-out, left 1.5s ease-in-out;
+    -webkit-transition: width 1s ease-in-out, left 1.5s ease-in-out;
+    -moz-transition: width 1s ease-in-out, left 1.5s ease-in-out;
+    -o-transition: width 1s ease-in-out, left 1.5s ease-in-out;
+    transition: width 1s ease-in-out, left 1.5s ease-in-out;
+}
+
+
+
+/*
+================================================================================
+MENU 
+================================================================================
+*/
+  
+.underline::before {
+    content: "";
+    border-bottom: solid 3px #9b2557;
+   position: absolute;
+   /* bottom: 0.8em;*/
+    left: -1.25em;
+    width: 1em;
+    
+    transform: scaleX(0);
+    transform-origin: right;
+    transition: transform 0.25s;
+  }
+  .underline:hover::before {
+    transform-origin: left;
+    transform: scaleX(1);
+  }
+  @-webkit-keyframes underline {
+    from {
+      transform: scaleX(0);
+    }
+    to {
+      transform: scaleX(1);
+    }
+  }
+  @keyframes underline {
+    from {
+      transform: scaleX(0);
+    }
+    to {
+      transform: scaleX(1);
+    }
+  }
+  
+  /* vidi šta je ovo nešto za mobilni menu */
+  @media only screen and (max-width: 992px) {
+    li {
+      width: 100%;
+      text-align: center;
+      margin-bottom: 1rem;
+    }
+  }
+
+/*
+================================================================================
+CURRENT
+================================================================================
+*/
+.nav-link.w-inline-block.w--current:before {
+    content: "";
+  border-bottom: solid 3px #9b2557;
+ position: absolute;
+  left: -1.25em;
+  width: 1em;
+   
+}
+
+/*
+================================================================================
+BEN MINGO FONT SMOOTH - TEST
+================================================================================
+*/
+html {
+    -webkit-text-size-adjust: none;
+    -webkit-font-smoothing: subpixel-antialiased;
+    -webkit-font-smoothing: antialiased
+  }
+
+/*
+================================================================================
+SCROLLBAR FIX
 ================================================================================
 */
 body,
@@ -61,7 +148,11 @@ IMAGE BLEND MODE
   transform: translateZ(0);
 }
 
-
+/*
+================================================================================
+SWIPER HOME
+================================================================================
+*/
 
 .swiper-pagination {
 	/*position: absolute;
@@ -120,7 +211,6 @@ transform-origin: top left;
   }
 }
 
-
   /*
 ================================================================================
 SWIPER FIX
@@ -131,3 +221,79 @@ SWIPER FIX
 
     z-index: 2 !important;
 }
+
+/*
+================================================================================
+SEARCH
+================================================================================
+*/
+ 
+.w-input, .w-select {
+    color: #f5f4f1;
+}
+
+.w-input:focus, .w-select:focus {
+    border-color: #f5f4f1;
+}
+
+.search-button:focus {
+outline: none;
+}
+  
+/* SEARCH INPUT TEXT COLOR */ 
+  input[type="search"]::placeholder {
+    color: #f5f4f1;
+}
+
+/*
+================================================================================
+KILL WEBFLOW BADGE
+================================================================================
+*/
+.w-webflow-badge {
+    position: relative !important;
+    right: 1000px !important;
+  }
+
+
+/*
+================================================================================
+MEDIA QUERY
+================================================================================
+*/
+/*
+@media (max-width: 699px) {
+  html {
+  font-size:12px
+  }
+  }
+  @media (min-width: 700px) and (max-width:999px) {
+  html {
+  font-size:13px
+  }
+  }
+  @media (min-width: 1000px) and (max-width:1199px) {
+  html {
+  font-size:14px
+  }
+  }
+  @media (min-width: 1200px) and (max-width:1599px) {
+  html {
+  font-size:16px
+  }
+  }
+  @media (min-width: 1600px) and (max-width:1999px) {
+  html {
+  font-size:18px
+  }
+  }
+  @media (min-width: 2000px) and (max-width:2399px) {
+  html {
+  font-size:21px
+  }
+  }
+  @media (min-width: 2400px) {
+  html {
+  font-size:24px
+  }
+  }
