--- a/main.css
+++ b/main.css
@@ -150,6 +150,22 @@ IMAGE BLEND MODE
 
 /*
 ================================================================================
+NTH CHILDS
+================================================================================
+*/
+
+.newswrap:nth-last-child(-n+3) {
+    border-bottom: 3px solid #9b2557;
+    
+  }
+
+.claniceminigrid:nth-last-child(-n+3) {
+    border-bottom: 3px solid #9b2557;
+    
+  }
+  
+/*
+================================================================================
 SWIPER HOME
 ================================================================================
 */
@@ -297,3 +313,13 @@ MEDIA QUERY
   font-size:24px
   }
   }
+*/
+
+/*
+================================================================================
+TEXT SINGLE PAGE
+================================================================================
+*/
+.swiper-button-n:focus,
+.swiper-button-p:focus { 
+outline: none; }
