--- a/main.css
+++ b/main.css
@@ -1,3 +1,4 @@
+
 /*
 ================================================================================
 SCROLLBAR STYLE
@@ -98,6 +99,23 @@ CURRENT
   width: 1em;
    
 }
+
+/*
+================================================================================
+CURRENT
+================================================================================
+*/
+::selection {
+background: #9b2557; /* Safari */
+color: #f5f4f1; 
+text-shadow: none;}
+
+::-moz-selection {
+   background: #9b2557; /* Firefox */
+   color: #f5f4f1;
+}
+
+
 
 /*
 ================================================================================
