--- a/main.css
+++ b/main.css
@@ -24,6 +24,31 @@ background:rgb(155, 37, 87);
 
 /*
 ================================================================================
+NO SELECTION
+================================================================================
+*/
+
+.nosel {
+  -webkit-user-select: none;  /* Chrome all / Safari all */
+  -moz-user-select: none;     /* Firefox all */
+  -ms-user-select: none;      /* IE 10+ */
+  user-select: none;          /* Likely future */      
+}
+
+
+/*
+================================================================================
+iOS HIGHLIGHT COLOR FIX
+================================================================================
+*/
+html {
+    -webkit-tap-highlight-color: rgba(0,0,0,0) !important;
+    }
+
+    
+
+/*
+================================================================================
 ANIMATE ON RESIZE
 ================================================================================
 */
@@ -100,9 +125,10 @@ CURRENT
    
 }
 
+
 /*
 ================================================================================
-CURRENT
+TXT SELECT
 ================================================================================
 */
 ::selection {
