--- a/main.css
+++ b/main.css
@@ -1,6 +1,19 @@
 
 /*
 ================================================================================
+SCROLLBAR FIX
+================================================================================
+*/
+body,
+html {
+  /*width:100vw;*/
+  margin: 0;
+  padding: 0;
+ /* overflow-x: hidden; */
+}
+
+/*
+================================================================================
 SCROLLBAR STYLE
 ================================================================================
 */
@@ -17,11 +30,16 @@ body::-webkit-scrollbar-thumb {
 background:rgb(155, 37, 87);
 }
 
+body {overflow-y:hidden;}
+body:hover {overflow-y:scroll;}
+
 /*track
 ::-webkit-scrollbar-track {
   background:rgb(245, 244, 241);
 }
 */
+
+
 
 /*
 ================================================================================
@@ -155,18 +173,7 @@ html {
     -webkit-font-smoothing: antialiased
   }
 
-/*
-================================================================================
-SCROLLBAR FIX
-================================================================================
-*/
-body,
-html {
-  /*width:100vw;*/
-  margin: 0;
-  padding: 0;
- /* overflow-x: hidden; */
-}
+
 
 /*
 ================================================================================
