--- a/main.css
+++ b/main.css
@@ -39,6 +39,11 @@ body:hover {overflow-y:scroll;}
 }
 */
 
+/*FIREFOX SCROLLBAR */
+body {
+    scrollbar-width: thin;          /* "auto" or "thin" */
+    scrollbar-color: blue orange;   /* scroll thumb and track */
+  }
 
 
 /*
