--- a/main.css
+++ b/main.css
@@ -41,9 +41,9 @@ body:hover {overflow-y:scroll;}
 */
 
 /*FIREFOX SCROLLBAR */
-body {
-    scrollbar-width: thin;          /* "auto" or "thin" */
-    scrollbar-color: blue orange;   /* scroll thumb and track */
+* {
+    scrollbar-width: thin;
+    scrollbar-color: blue orange;
   }
 
 
