--- a/main.css
+++ b/main.css
@@ -22,7 +22,7 @@ SCROLLBAR STYLE
 /*width*/
 
 body::-webkit-scrollbar {
-width:5px;
+width:8px;
 }
 
 /*thumb*/
@@ -31,10 +31,10 @@ body::-webkit-scrollbar-thumb {
 background:rgb(155, 37, 87);
 }
 
-
+/*
 body {overflow-y:hidden;}
 body:hover {overflow-y:scroll;}
-
+*/
 /*track
 ::-webkit-scrollbar-track {
   background:rgb(245, 244, 241);
