--- a/main.css
+++ b/main.css
@@ -44,7 +44,7 @@ body:hover {overflow-y:scroll;}
 /*FIREFOX SCROLLBAR */
 body {
     scrollbar-width: thin;
-    scrollbar-color: blue orange;
+    scrollbar-color: #9b2557;
   }
 
 
