--- a/main.css
+++ b/main.css
@@ -9,7 +9,7 @@ html {
   /*width:100vw;*/
   margin: 0;
   padding: 0;
- /* overflow-x: hidden; */
+  overflow-x: hidden; 
 }
 
 /*
@@ -47,7 +47,7 @@ body {
     scrollbar-color: #9b2557;
   }
 
-  
+
 
 /*
 ================================================================================
