--- a/main.css
+++ b/main.css
@@ -20,13 +20,13 @@ SCROLLBAR STYLE
   
 
 /*width*/
-
+/*
 body::-webkit-scrollbar {
 width:8px;
 }
 
 /*thumb*/
-
+/*
 body::-webkit-scrollbar-thumb {
 background:rgb(155, 37, 87);
 }
@@ -42,12 +42,13 @@ body:hover {overflow-y:scroll;}
 */
 
 /*FIREFOX SCROLLBAR */
+/*
 body {
     scrollbar-width: thin;
     scrollbar-color: #9b2557;
   }
 
-
+*/
 
 /*
 ================================================================================
