--- a/main.css
+++ b/main.css
@@ -56,7 +56,7 @@ NO SELECTION
 ================================================================================
 */
 
-.nosel {
+.noselk {
   -webkit-user-select: none;  /* Chrome all / Safari all */
   -moz-user-select: none;     /* Firefox all */
   -ms-user-select: none;      /* IE 10+ */
