--- a/main.css
+++ b/main.css
@@ -234,6 +234,21 @@ NTH CHILDS
     border-bottom: 3px solid #9b2557;
     
   }
+
+  .doc-grid-item:nth-of-type(1) {
+    border-top: 3px solid #9b2557;
+    
+  }
+  
+  .doc-grid-item:nth-last-of-type(1) {
+    border-bottom: 3px solid #9b2557;
+    
+  }
+  
+  .docsolowrap:nth-last-of-type(n+1) {
+    border-bottom: 3px solid #9b2557;
+    
+  }
   
 /*
 ================================================================================
