--- a/main.css
+++ b/main.css
@@ -451,43 +451,50 @@ OHOHO
 MEDIA QUERY
 ================================================================================
 */
-/*
+
 @media (max-width: 699px) {
-  html {
+  /*html {
   font-size:12px
-  }
+  }*/
   }
   @media (min-width: 700px) and (max-width:999px) {
-  html {
+ /* html {
   font-size:13px
-  }
+  }*/
   }
   @media (min-width: 1000px) and (max-width:1199px) {
-  html {
+  /*html {
   font-size:14px
-  }
+  }*/
   }
   @media (min-width: 1200px) and (max-width:1599px) {
-  html {
+
+    .contactwrap {
+    border-bottom: 1;
+    }
+  /*html {
   font-size:16px
-  }
+  }*/
   }
   @media (min-width: 1600px) and (max-width:1999px) {
-  html {
+  /*html {
   font-size:18px
-  }
+  }*/
+  .contactwrap {
+    border-bottom: 7;
+    }
   }
   @media (min-width: 2000px) and (max-width:2399px) {
-  html {
+  /*html {
   font-size:21px
-  }
+  }*/
   }
   @media (min-width: 2400px) {
-  html {
+  /*html {
   font-size:24px
+  }*/
   }
-  }
-*/
+
 
 
 /*
