--- a/main.css
+++ b/main.css
@@ -470,8 +470,11 @@ MEDIA QUERY
   @media (min-width: 1200px) and (max-width:1599px) {
 
     .contactwrap {
-    border-top: 1;
+        border-top: 1px solid #9b2557;
     }
+
+
+
   /*html {
   font-size:16px
   }*/
@@ -481,7 +484,7 @@ MEDIA QUERY
   font-size:18px
   }*/
   .contactwrap {
-    border-top: 7;
+    border-top: 7px solid #9b2557;
     }
   }
   @media (min-width: 2000px) and (max-width:2399px) {
