--- a/main.css
+++ b/main.css
@@ -237,6 +237,27 @@ NTH CHILDS
 ================================================================================
 */
 
+
+.great-great-grandchild{
+  border-bottom: 1px solid #9b2557;
+}
+
+.child:nth-child(1) .grandchild {
+  border-top: 3px solid #9b2557;
+}
+
+.child:nth-last-child(1) .grandchild {
+  border-bottom: 3px solid #9b2557;
+}
+  
+
+
+
+
+
+
+
+
 .newswrap:nth-last-child(-n+3) {
     border-bottom: 3px solid #9b2557;
     
