--- a/main.css
+++ b/main.css
@@ -242,6 +242,10 @@ NTH CHILDS
   border-bottom: 1px solid #9b2557;
 }
 
+.great-great-grandchild:nth-last-child(1){
+  border-bottom: 0px solid #9b2557;
+}
+
 .child:nth-child(1) .grandchild {
   border-top: 3px solid #9b2557;
 }
