--- a/main.css
+++ b/main.css
@@ -242,7 +242,7 @@ NTH CHILDS
   border-bottom: 1px solid #9b2557;
 }
 
-.great-great-grandchild:nth-last-child(1){
+.great-great-grandchild:nth-last-child(1) .grandchild{
   border-bottom: 0px solid #9b2557;
 }
 
