--- a/main.css
+++ b/main.css
@@ -242,7 +242,7 @@ NTH CHILDS
   border-bottom: 1px solid #9b2557;
 }
 
-.great-great-grandchild:nth-last-child(2) .grandchild{
+.great-great-grandchild:nth-last-child(2) {
   border-bottom: 0px solid #9b2557;
 }
 
