--- a/main.css
+++ b/main.css
@@ -241,7 +241,7 @@ NTH CHILDS
 .great-great-grandchild{
   border-bottom: 1px solid #9b2557;
 }
-li:nth-last-child(1) .great-great-grandchild {
+li:nth-last-child(1) .grandchild {
   border-bottom: 0px solid #9b2557;
 }
 
