--- a/main.css
+++ b/main.css
@@ -242,11 +242,11 @@ NTH CHILDS
   border-bottom: 1px solid #9b2557;
 }
 
-.child:nth-child(1) .grandchild {
+.child:nth-child(1) .grandgrandchild {
   border-top: 3px solid #9b2557;
 }
 
-.child:nth-last-child(1) .grandchild {
+.child:nth-last-child(1) .grandgrandchild {
   border-bottom: 3px solid #9b2557;
 }
   
