--- a/main.css
+++ b/main.css
@@ -242,15 +242,21 @@ NTH CHILDS
   border-bottom: 1px solid #9b2557;
 }
 
-.child:nth-child(1) .grandgrandchild {
+.child:nth-child(1) .grandchild {
   border-top: 3px solid #9b2557;
 }
 
-.child:nth-last-child(1) .grandgrandchild {
+.child:nth-last-child(1) .grandchild {
   border-bottom: 3px solid #9b2557;
 }
   
+.childprojekt:nth-child(1) .grandchild {
+  border-top: 3px solid #9b2557;
+}
 
+.childprojekt:nth-last-child(1) .grandchild {
+  border-bottom: 3px solid #9b2557;
+}
 
 
 
