--- a/main.css
+++ b/main.css
@@ -250,11 +250,11 @@ NTH CHILDS
   border-bottom: 3px solid #9b2557;
 }
   
-.childprojekt:nth-child(1) .grandchild {
+.childprojekt:nth-child(1)  {
   border-top: 3px solid #9b2557;
 }
 
-.childprojekt:nth-last-child(1) .grandchild {
+.childprojekt:nth-last-child(1)  {
   border-bottom: 3px solid #9b2557;
 }
 
