--- a/main.css
+++ b/main.css
@@ -112,7 +112,10 @@ MENU
   .underline:hover::before {
     transform-origin: left;
     transform: scaleX(1);
+    left: 50px;
   }
+
+
   @-webkit-keyframes underline {
     from {
       transform: scaleX(0);
