--- a/main.css
+++ b/main.css
@@ -254,8 +254,13 @@ NTH CHILDS
   border-bottom: 3px solid #9b2557;
 }
   
+.childprojekt:nth-child(1) .grandchild {
+  border-top: 3px solid #9b2557;
+}
 
-
+.childprojekt:nth-last-child(1) .grandchild {
+  border-bottom: 3px solid #9b2557;
+}
 
 
 
