--- a/main.css
+++ b/main.css
@@ -246,6 +246,7 @@ NTH CHILDS
   border-bottom: 1px solid #9b2557;
 }
 
+/*
 .child:nth-child(1) .grandchild {
   border-top: 3px solid #9b2557;
 }
@@ -253,7 +254,7 @@ NTH CHILDS
 .child:nth-last-child(1) .grandchild {
   border-bottom: 3px solid #9b2557;
 }
-  
+  */
 .childprojekt:nth-child(1) .grandchild {
   border-top: 3px solid #9b2557;
 }
