--- a/main.css
+++ b/main.css
@@ -253,8 +253,8 @@ NTH CHILDS
 .child:nth-last-child(1) .grandchild {
   border-bottom: 3px solid #9b2557;
 }
-/*  
-.childprojekt:nth-child(1) .grandchild {
+
+.projectwrap:nth-child(1) .grandchild {
   border-top: 3px solid #9b2557;
 }
 /*
