--- a/main.css
+++ b/main.css
@@ -257,11 +257,11 @@ NTH CHILDS
 .projectwrap .child:nth-child(1) .grandchild {
   border-top: 3px solid #9b2557;
 }
-/*
-.childprojekt:nth-last-child(1) .grandchild {
+
+.projectwrap .childprojekt:nth-last-child(1) .grandchild {
   border-bottom: 3px solid #9b2557;
 }
-*/
+
 
 
 
