--- a/main.css
+++ b/main.css
@@ -201,7 +201,7 @@ IMAGE BLEND MODE
 
 
 .newswrap:focus .card__image, .newswrap:hover .card__image {
-  mix-blend-mode: multiply;
+  mix-blend-mode: screen;
 }
 
 .newswrapfix:focus .card__blend-colour, .newswrapfix:hover .card__blend-colour {
@@ -210,7 +210,7 @@ IMAGE BLEND MODE
   
   
   .newswrapfix:focus .card__image, .newswrapfix:hover .card__image {
-    mix-blend-mode: multiply;
+    mix-blend-mode: screen;
   }
 
   .child:focus .card__blend-colour, .projectwrap:hover .card__blend-colour {
@@ -219,14 +219,15 @@ IMAGE BLEND MODE
    
   
   .child:focus .card__image, .projectwrap:hover .card__image {
-    mix-blend-mode: multiply;
+    mix-blend-mode: screen;
   }
 
 
 .card__image--transition {
   transition: 0.3s ease all;
   transition-delay: 0s;
-  mix-blend-mode: multiply;
+  mix-blend-mode: screen;
+  background-color: #9B2557;
 }
 
 .card__image {
