--- a/main.css
+++ b/main.css
@@ -1,4 +1,8 @@
 
+html {
+  background-color: #fff; /* even the same color will do the job */
+}
+
 /*
 ================================================================================
 SCROLLBAR FIX
