--- a/main.css
+++ b/main.css
@@ -197,7 +197,7 @@ IMAGE BLEND MODE
 
 .newswrap:focus .card__blend-colour, .newswrap:hover .card__blend-colour {
   background-color: #9B2557;
-  mix-blend-mode: screen;
+  
 }
 .newswrap:focus .card__image, .newswrap:hover .card__image {
   mix-blend-mode: screen;
@@ -225,7 +225,7 @@ IMAGE BLEND MODE
 .card__image--transition {
   transition: 0.3s ease all;
   transition-delay: 0s;
-  mix-blend-mode: normal;
+  mix-blend-mode: multiply;
   background-color: #000000;
 }
 
