--- a/main.css
+++ b/main.css
@@ -226,7 +226,7 @@ IMAGE BLEND MODE
   transition: 0.3s ease all;
   transition-delay: 0s;
   mix-blend-mode: screen;
-  background-color: #000000;
+  /*background-color: #000000;*/
 }
 
 
