--- a/main.css
+++ b/main.css
@@ -225,7 +225,7 @@ IMAGE BLEND MODE
 .card__image--transition {
   transition: 0.3s ease all;
   transition-delay: 0s;
-  mix-blend-mode: screen;
+  mix-blend-mode: normal;
   /*background-color: #000000;*/
 }
 
