--- a/main.css
+++ b/main.css
@@ -279,6 +279,25 @@ NTH CHILDS
     
   }
 
+/*
+================================================================================
+HOME TAB BEFORE
+================================================================================
+*/
+
+  .tabwrap.w--current:before {
+    color: #9b2557;
+   /* content: "—  ";*/
+    content: "";
+border-bottom: solid 3px #9b2557;
+position: absolute;
+left: -1.25em;
+width: 1em;
+}
+
+
+ 
+
   /*
   .doc-grid-item:nth-of-type(1) {
     border-top: 3px solid #9b2557;
