--- a/main.css
+++ b/main.css
@@ -291,7 +291,7 @@ HOME TAB BEFORE
     content: "";
 border-bottom: solid 3px #9b2557;
 position: absolute;
-left: -1.25em;
+/*left: -1.25em;*/
 width: 1em;
 }
 
