--- a/main.css
+++ b/main.css
@@ -277,7 +277,7 @@ NTH CHILDS
 .claniceminigrid:nth-last-child(-n+3) {
     border-bottom: 3px solid #9b2557;
     
-    
+
   }
 
 /*
@@ -293,6 +293,7 @@ HOME TAB BEFORE
 border-bottom: solid 3px #9b2557;
 position: absolute;
 left: -1.25em;
+top: 0.2em;
 width: 1em;
 }
 
