--- a/main.css
+++ b/main.css
@@ -4,7 +4,7 @@ COOKIE SKIN
 ================================================================================
 */
 .ch2-theme-bar .ch2-dialog-content {
-	font-size: 1rem !important;
+	/*font-size: 1rem !important;*/
 }
 .ch2-style-light .ch2-btn-secondary {
     background: #fff !important;
