--- a/main.css
+++ b/main.css
@@ -14,7 +14,7 @@ COOKIE SKIN
     box-shadow: 0 0 0px 0 rgba(0,0,0,.1) !important;
 }
 .ch2-theme-bar .ch2-dialog p {
-    font-size: 1.35em  !important;
+   /* font-size: 1.35em  !important;*/
 color: #9b2557 !important;
 }
 .ch2-style-light .ch2-btn-primary, .ch2-style-dark .ch2-btn-primary {
