--- a/main.css
+++ b/main.css
@@ -10,7 +10,7 @@ COOKIE SKIN
 .ch2-container, .ch2-icon {
   font-family: 'Nimbussansdot regu', sans-serif!important;
   /* font-family: sans-serif; */
-   font-size: 1vw; 
+   font-size: 18; 
   /* line-height: 1; */
   
 }
