--- a/main.css
+++ b/main.css
@@ -17,18 +17,18 @@ COOKIE SKIN
 
 
 .ch2-style-light .ch2-btn-secondary {
-    background: #fff !important;
-    color: #9b2557 !important;
+    background: #9b2557 !important;
+    color: #fff !important;
 }
 .ch2-theme-bar .ch2-dialog {
-    box-shadow: 0 0 0px 0 rgba(0,0,0,.1) !important;
+    box-shadow: 0 0 0px 0 rgba(0,0,0,0) !important;
 }
 .ch2-theme-bar .ch2-dialog p {
    /* font-size: 1.35em  !important;*/
-color: #9b2557 !important;
+color: #9fff !important;
 }
 .ch2-style-light .ch2-btn-primary, .ch2-style-dark .ch2-btn-primary {
-    background: #fff !important;
+    background: #9b2557 !important;
 }
 .ch2-btn:hover {
     box-shadow: 0 0 0px 0 rgba(0,0,0,.4) !important;
