--- a/main.css
+++ b/main.css
@@ -25,7 +25,7 @@ COOKIE SKIN
 }
 .ch2-theme-bar .ch2-dialog p {
    /* font-size: 1.35em  !important;*/
-color: #9fff !important;
+color: #fff !important;
 }
 .ch2-style-light .ch2-btn-primary, .ch2-style-dark .ch2-btn-primary {
     background: #9b2557 !important;
