--- a/main.css
+++ b/main.css
@@ -41,8 +41,8 @@ color: #fff !important;
     font-weight: 400 !important;
 }
 .ch2-style-light .ch2-btn-primary {
-    background: #fff !important;
-    color: #9b2557 !important;
+    background: #9b2557 !important;
+    color: #fff !important;
 }
 .ch2-dialog-content p:first-child {
     display: none !important;
