--- a/main.css
+++ b/main.css
@@ -16,7 +16,7 @@ COOKIE SKIN
 }
 
 .ch2-style-light .ch2-dialog {
-  background: #9b2557;
+  background: #9b2557!important;
 }
 
 .ch2-style-light .ch2-btn-secondary {
