--- a/main.css
+++ b/main.css
@@ -20,7 +20,7 @@ COOKIE SKIN
 }
 
 .ch2-style-light .ch2-btn-secondary {
-    background: #9b2557 !important;
+    background: transparent !important;
     color: #fff !important;
 }
 .ch2-theme-bar .ch2-dialog {
