--- a/main.css
+++ b/main.css
@@ -60,7 +60,7 @@ color: #fff !important;
 }
 .ch2-theme-bar .ch2-dialog-content {margin-top: 0.73em !important;
 }
-.ch2-container, .ch2-icon {font-size: 1rem  !important;
+.ch2-container, .ch2-icon {font-size: 1vw  !important;
 }
 .ch2-theme-bar .ch2-dialog-actions button {
     min-width: auto !important;
