--- a/main.css
+++ b/main.css
@@ -74,6 +74,10 @@ color: #f5f4f1 !important;
 }
 
 
+#ch2-dialog-description {
+  max-width: 45ch;
+}
+
 
 /*
 ================================================================================
