--- a/main.css
+++ b/main.css
@@ -77,6 +77,7 @@ color: #f5f4f1 !important;
 
 .ch2-theme-bar .ch2-dialog p:last-child, .ch2-theme-bar .ch2-dialog p:nth-child(2) {
   /* display: inline; */
+  display: block;
   max-width: 300px!important;
 }
 
