--- a/main.css
+++ b/main.css
@@ -74,10 +74,12 @@ color: #f5f4f1 !important;
 }
 
 .ch2-theme-bar .ch2-dialog-actions {
-  margin-left: 15em;
+  margin-left: 15em!important;
 }
 
-
+.ch2-dialog-actions button {
+  height: 0.813em!important;
+}
 
 /*
 ================================================================================
