--- a/main.css
+++ b/main.css
@@ -79,7 +79,9 @@ color: #f5f4f1 !important;
 
 .ch2-dialog-actions button {
   height: 0.813em!important;
+  margin-right: -0.95em!important;
 }
+
 
 /*
 ================================================================================
