--- a/main.css
+++ b/main.css
@@ -88,15 +88,16 @@ color: #f5f4f1 !important;
 SCROLLBAR FIX
 ================================================================================
 */
+/*
 body,
 html {
-  /*width:100vw;*/
+  
   margin: 0;
   padding: 0;
   overflow-x: hidden; 
 }
 
-
+*/
 /*
 ================================================================================
 SCROLLBAR STYLE
