--- a/main.css
+++ b/main.css
@@ -591,11 +591,14 @@ MEDIA QUERY
  /* html {
   font-size:13px
   }*/
+  .contactwrap {
+    border-top: 1px solid #9b2557;
+}
   }
   @media (min-width: 1000px) and (max-width:1199px) {
-  html {
+  /*html {
   font-size:14px
-  }
+  }*/
   .contactwrap {
     border-top: 2px solid #9b2557;
 }
