--- a/main.css
+++ b/main.css
@@ -599,13 +599,16 @@ MEDIA QUERY
   .claniceminigrid:nth-last-child(-n+3) {
     border-bottom: 2px solid #9b2557;  
   }
-
+  .claniceminigrid {
+    border-top: 2px solid #9b2557;  
+  }
 
   }
   @media (min-width: 700px) and (max-width:999px) {
  /* html {
   font-size:13px
   }*/
+  /*
   .contactwrap, .footersponzorwrap {
     border-top: 2px solid #9b2557;
 }
@@ -626,7 +629,7 @@ MEDIA QUERY
     border-bottom: 2px solid #9b2557;  
   }
 
-
+*/
 
 
   }
@@ -652,11 +655,13 @@ MEDIA QUERY
   .claniceminigrid:nth-last-child(-n+3) {
     border-bottom: 3px solid #9b2557;  
   }
-
+  .claniceminigrid {
+    border-top: 3px solid #9b2557;  
+  }
 
   }
   @media (min-width: 1200px) and (max-width:1599px) {
-
+/*
     .contactwrap, .footersponzorwrap  {
       border-top: 3px solid #9b2557;
   }
@@ -676,7 +681,7 @@ MEDIA QUERY
       border-bottom: 3px solid #9b2557;  
     }
 
-    
+    */
 
 
 
@@ -708,7 +713,7 @@ MEDIA QUERY
   }
 
   .claniceminigrid {
-    border-top: 15px solid #9b2557;  
+    border-top: 4px solid #9b2557;  
   }
 
 
@@ -737,7 +742,9 @@ MEDIA QUERY
   .claniceminigrid:nth-last-child(-n+3) {
     border-bottom: 5px solid #9b2557;  
   }
-
+  .claniceminigrid {
+    border-top: 5px solid #9b2557;  
+  }
  
   
   }
@@ -745,6 +752,7 @@ MEDIA QUERY
   /*html {
   font-size:24px
   }*/
+  /*
   .contactwrap, .footersponzorwrap {
     border-top: 5px solid #9b2557;
 }
@@ -766,7 +774,7 @@ MEDIA QUERY
     border-bottom: 5px solid #9b2557;  
   }
 
-
+*/
   }
 
 
